[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-cost-mcp"
version = "0.1.0"
description = "MCP server that tracks AI agent token usage and spending in real time. Budget alerts, per-task cost, daily reports."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ha Le", email = "halevanthien@gmail.com" }
]
keywords = ["mcp", "ai", "agent", "cost", "tokens", "budget", "claude", "openai", "cursor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/vanthienha199/agent-cost-mcp"
Issues = "https://github.com/vanthienha199/agent-cost-mcp/issues"

[project.scripts]
agent-cost-mcp = "agent_cost_mcp.server:main"
